# ligma

./: .env.example  .gitignore  AGENT.md  CONTRIBUTING.md  INSTALL.md  QUICKSTART.md  README.md  config.py  main.py  pyproject.toml
core/: engine.py  instructions.py  memory.py  personality.py
core/providers/: __init__.py  base.py  ollama_provider.py  openrouter_provider.py
core/skills/: __init__.py  base.py  browser.py  gifs.py  manager.py  search.py
core/utils/: gifs.py
personalities/: default.txt
