[project]
name = "ligma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.4",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.12.0",
    "discord-py>=2.7.1",
    "lxml>=6.0.2",
    "ollama>=0.6.1",
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
